--- a/grunt/cssSource/_mobileFirstStyles.scss
+++ b/grunt/cssSource/_mobileFirstStyles.scss
@@ -246,7 +246,7 @@ a.pagination-link {
 // remove box-shadow from handheld view
 .aside-outer-wrapper-class {
   box-shadow: none;
-  padding: 1px 10px 51px 10px;
+  padding: 1px 10px 200px;
 }
 
 // the <aside> nav links
